--- a/front-end/vercel.json
+++ b/front-end/vercel.json
@@ -1,14 +1,6 @@
 {
-  "builds": [
-    {
-        "src": "./index.js",
-        "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-        "src": "/(.*)",
-        "dest": "/"
-    }
+  "rewrites": [
+    { "source": "/api/(.*)", "destination": "/api/$1" },
+    { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
