--- a/back-end/vercel.json
+++ b/back-end/vercel.json
@@ -12,6 +12,14 @@
             "dest": "/api/index.js"
         },
         {
+            "src": "/health",
+            "dest": "/api/index.js"
+        },
+        {
+            "src": "/",
+            "dest": "/api/index.js"
+        },
+        {
             "src": "/(.*)",
             "dest": "/api/index.js"
         }
