--- a/back-end/vercel.json
+++ b/back-end/vercel.json
@@ -9,11 +9,19 @@
     "routes": [
         {
             "src": "/api/(.*)",
-            "dest": "/index.js"
+            "dest": "/index.js",
+            "methods": ["GET", "POST", "PUT"],
+            "headers": {
+                "Access-Control-Allow-Origin": "*"
+            }
         },
         {
             "src": "/(.*)",
-            "dest": "/index.js"
+            "dest": "/index.js",
+            "methods": ["GET", "POST", "PUT"],
+            "headers": {
+                "Access-Control-Allow-Origin": "*"
+            }
         }
     ]
 }
