--- a/back-end/vercel.json
+++ b/back-end/vercel.json
@@ -1,27 +1,15 @@
 {
-    "version": 2,
-    "builds": [
-        {
-            "src": "./index.js",
-            "use": "@vercel/node"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/api/(.*)",
-            "dest": "/index.js",
-            "methods": ["GET", "POST", "PUT"],
-            "headers": {
-                "Access-Control-Allow-Origin": "*"
-            }
-        },
-        {
-            "src": "/(.*)",
-            "dest": "/index.js",
-            "methods": ["GET", "POST", "PUT"],
-            "headers": {
-                "Access-Control-Allow-Origin": "*"
-            }
-        }
-    ]
+  "version": 2,
+  "builds": [
+    {
+      "src": "index.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/index.js"
+    }
+  ]
 }
